--- a/src/components/controls/Radio/Radio.module.scss
+++ b/src/components/controls/Radio/Radio.module.scss
@@ -44,7 +44,8 @@ $radio-dot-size: 12px; // This has to be px to avoid sub-px rendering issues
     height: $radio-dot-size;
     opacity: 0;
     transform: scale(0.8);
-    transition: opacity transition.$duration transition.$timing,
+    transition:
+      opacity transition.$duration transition.$timing,
       transform transition.$duration-boing transition.$timing-boing;
     width: $radio-dot-size;
 
