--- a/src/styles/variables/font.scss
+++ b/src/styles/variables/font.scss
@@ -1,7 +1,21 @@
-$family: 'Open Sans', -apple-system, system-ui, BlinkMacSystemFont, Roboto,
-  Helvetica, Arial, sans-serif;
-$family-roboto: Roboto, Lato, -apple-system, system-ui, BlinkMacSystemFont,
-  Helvetica, Arial, sans-serif;
+$family:
+  'Open Sans',
+  -apple-system,
+  system-ui,
+  BlinkMacSystemFont,
+  Roboto,
+  Helvetica,
+  Arial,
+  sans-serif;
+$family-roboto:
+  Roboto,
+  Lato,
+  -apple-system,
+  system-ui,
+  BlinkMacSystemFont,
+  Helvetica,
+  Arial,
+  sans-serif;
 
 $line-height: 1.25;
 $line-height-sm: 1.125;
