--- a/src/styles/variables/font.scss
+++ b/src/styles/variables/font.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable scss/dollar-variable-colon-space-after */
 $family:
   'Open Sans',
   -apple-system,
@@ -16,6 +17,7 @@ $family-roboto:
   Helvetica,
   Arial,
   sans-serif;
+/* stylelint-enable scss/dollar-variable-colon-space-after */
 
 $line-height: 1.25;
 $line-height-sm: 1.125;
