feat: import mobius css variables

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,5 @@
 @use '~normalize.css/normalize';
-@use 'variables/color';
-@use 'variables/font';
-@use 'variables/transition';
+@use '~@etchteam/mobius-variables/dist';
 
 @use 'base/buttons';
 @use 'base/skins';
