--- a/src/components/controls/Button/Button.module.scss
+++ b/src/components/controls/Button/Button.module.scss
@@ -1,14 +1,17 @@
-@use 'sass:color' as sassColor;
-@use '../../../styles/variables/breakpoint';
-@use '../../../styles/variables/color';
-@use '../../../styles/variables/font';
-@use '../../../styles/variables/spacing';
 @use '../../../styles/mixins/button';
 
 .button {
-  $types: primary, secondary, positive, negative;
+  $types: primary, secondary, positive, negative, inverse;
   @include button.default;
-  border-color: var(--button-border-color);
+  border-color: var(--mobius-button-border-color);
+
+  &:hover {
+    border-color: var(--mobius-button-border-color-hover);
+  }
+
+  &:focus-within {
+    border-color: var(--mobius-button-border-color-focus);
+  }
 
   &:active {
     position: relative;
@@ -24,10 +27,10 @@
 
   &--icon {
     aspect-ratio: 1;
-    line-height: font.$line-height;
+    line-height: var(--mobius-font-line-height);
     min-height: 0;
     min-width: 0;
-    padding: spacing.$xs spacing.$sm;
+    padding: var(--mobius-spacing-xs) var(--mobius-spacing-sm);
   }
 
   &--block {
@@ -38,7 +41,7 @@
       display: block;
       width: 100%;
 
-      @media (min-width: breakpoint.$md) {
+      @media (min-width: var(--mobius-breakpoint-md)) {
         display: inline-block;
         width: auto;
       }
@@ -48,14 +51,26 @@
   &--small {
     min-height: 2.25rem;
     min-width: 5.5rem;
-    padding: calc(#{spacing.$xs} - var(--button-border-width)) spacing.$sm;
+    padding: calc(var(--mobius-spacing-xs) - var(--mobius-button-border-width))
+      var(--mobius-spacing-sm);
   }
 
   @each $type in $types {
     &--#{$type} {
-      background: var(--button-background-#{$type});
-      border-color: var(--button-border-color-#{$type});
-      color: var(--button-color-#{$type});
+      background: var(--mobius-button-background-#{$type});
+      border-color: var(--mobius-button-border-color-#{$type});
+      color: var(--mobius-button-color-#{$type});
+
+      &:hover {
+        background: var(--mobius-button-background-hover-#{$type});
+        border-color: var(--mobius-button-border-color-hover-#{$type});
+        color: var(--mobius-button-color-hover-#{$type});
+      }
+
+      &:focus-within {
+        background: var(--mobius-button-background-focus-#{$type});
+        border-color: var(--mobius-button-border-color-focus-#{$type});
+      }
     }
   }
 }
