--- a/src/styles/mixins/skin.scss
+++ b/src/styles/mixins/skin.scss
@@ -1,14 +1,14 @@
 @mixin skin($type) {
-  --skin-background: var(--skin-background-#{$type});
-  --skin-background-muted: var(--skin-background-muted-#{$type});
-  --skin-border-color: var(--skin-border-color-#{$type});
-  --skin-color: var(--skin-color-#{$type});
-  --skin-color-muted: var(--skin-color-muted-#{$type});
-  --skin-heading-color: var(--skin-heading-color-#{$type});
-  --skin-link-color: var(--skin-link-color-#{$type});
-  --skin-link-text-decoration: var(--skin-link-text-decoration-#{$type});
+  --skin-background: var(--mobius-skin-background-#{$type});
+  --skin-background-muted: var(--mobius-skin-background-muted-#{$type});
+  --skin-border-color: var(--mobius-skin-border-color-#{$type});
+  --skin-color: var(--mobius-skin-color-#{$type});
+  --skin-color-muted: var(--mobius-skin-color-muted-#{$type});
+  --skin-heading-color: var(--mobius-skin-heading-color-#{$type});
+  --skin-link-color: var(--mobius-skin-link-color-#{$type});
+  --skin-link-text-decoration: var(--mobius-skin-link-text-decoration-#{$type});
   --skin-link-text-decoration-hover: var(
-    --skin-link-text-decoration-hover-#{$type}
+    --mobius-skin-link-text-decoration-hover-#{$type}
   );
 }
 
