--- a/src/components/canvas/Card/Card.module.scss
+++ b/src/components/canvas/Card/Card.module.scss
@@ -3,13 +3,12 @@
 @use '../../../styles/variables/spacing';
 @use '../../../styles/variables/transition';
 @use '../../../styles/variables/input';
-@use '../../../styles/variables/skin';
 
 .card {
-  background: skin.$background;
+  background: var(--skin-background);
   border: 1px solid transparent;
   border-radius: var(--card-border-radius, 0);
-  color: skin.$color;
+  color: var(--skin-color);
   display: block;
   transition:
     background-color transition.$duration transition.$timing,
@@ -18,7 +17,7 @@
   width: 100%;
 
   &__arrow {
-    color: skin.$link-color;
+    color: var(--skin-link-color);
     float: right;
     font-size: font.$size-xl;
     padding: spacing.$md;
@@ -48,7 +47,7 @@
     }
 
     &--border {
-      border-top: 1px solid skin.$border-color;
+      border-top: 1px solid var(--skin-border-color);
     }
 
     &--hidden {
@@ -57,14 +56,14 @@
   }
 
   &--border {
-    border-color: skin.$border-color;
+    border-color: var(--skin-border-color);
 
     .card__header {
-      border-bottom-color: skin.$border-color;
+      border-bottom-color: var(--skin-border-color);
     }
 
     .card__body:not(.card__body--hidden) + .card__body {
-      border-top: 1px solid skin.$border-color;
+      border-top: 1px solid var(--skin-border-color);
     }
   }
 
@@ -74,7 +73,7 @@
     text-decoration: none;
 
     &:hover {
-      border-color: skin.$link-color;
+      border-color: var(--skin-link-color);
       text-decoration: none;
     }
   }
@@ -90,13 +89,13 @@
   }
 
   &--disabled {
-    background: skin.$background-muted;
+    background: var(--skin-background-muted);
     pointer-events: none;
   }
 
   &--muted,
   &__body--muted {
-    background: skin.$background-muted;
+    background: var(--skin-background-muted);
   }
 
   &:has(.card__body--muted) {
