--- a/src/components/content/Badge/Badge.module.scss
+++ b/src/components/content/Badge/Badge.module.scss
@@ -2,26 +2,25 @@
 @use '../../../styles/variables/font';
 @use '../../../styles/variables/spacing';
 @use '../../../styles/variables/input';
-@use '../../../styles/variables/skin';
 
 .badge {
-  background: skin.$background;
-  color: skin.$color;
+  background: var(--skin-background);
+  color: var(--skin-color);
   display: inline-block;
   padding: (math.div(spacing.$xs, 2)) spacing.$sm;
 
   &--muted {
-    background: skin.$background-muted;
-    color: skin.$color-muted;
+    background: var(--skin-background-muted);
+    color: var(--skin-color-muted);
   }
 
   &--inverse {
-    background: skin.$color;
-    color: skin.$background;
+    background: var(--skin-color);
+    color: var(--skin-background);
 
     &.badge--muted {
-      background-color: skin.$color-muted;
-      color: skin.$background-muted;
+      background-color: var(--skin-color-muted);
+      color: var(--skin-background-muted);
     }
   }
 
