--- a/src/styles/base/_scaffolding.scss
+++ b/src/styles/base/_scaffolding.scss
@@ -1,6 +1,5 @@
 @use '../variables/font';
 @use '../variables/color';
-@use '../variables/skin';
 
 * {
   box-sizing: border-box;
@@ -12,8 +11,8 @@ body {
 }
 
 body {
-  background: skin.$background-muted;
-  color: skin.$color;
+  background: var(--skin-background-muted);
+  color: var(--skin-color);
   margin: 0;
   min-width: 20em;
   padding: 0;
