--- a/src/styles/mixins/title.scss
+++ b/src/styles/mixins/title.scss
@@ -1,9 +1,8 @@
 @use '../variables/font';
-@use '../variables/skin';
 @use '../variables/spacing';
 
 @mixin title {
-  color: skin.$heading-color;
+  color: var(--skin-heading-color);
   font-weight: var(--heading-font-weight, 700);
   letter-spacing: -0.025em;
   line-height: font.$line-height-sm;
