--- a/src/styles/variables/skin.scss
+++ b/src/styles/variables/skin.scss
@@ -1,3 +1,4 @@
+// TODO: This can be deleted once BoR styles have been updated
 $background: var(--skin-background);
 $background-muted: var(--skin-background-muted);
 $color: var(--skin-color);
