--- a/src/components/content/Faq/Faq.module.scss
+++ b/src/components/content/Faq/Faq.module.scss
@@ -1,9 +1,7 @@
-@use '../../../styles/variables/spacing';
-
 .faq {
   width: 100%;
 
   &__content {
-    padding-top: spacing.$md;
+    padding-top: var(--mobius-spacing-md);
   }
 }
