--- a/src/styles/mixins/title.scss
+++ b/src/styles/mixins/title.scss
@@ -1,12 +1,11 @@
 @use '../variables/font';
-@use '../variables/spacing';
 
 @mixin title {
   color: var(--skin-heading-color);
   font-weight: var(--heading-font-weight, 700);
   letter-spacing: -0.025em;
   line-height: font.$line-height-sm;
-  margin-bottom: spacing.$xs;
+  margin-bottom: var(--mobius-spacing-xs);
   margin-top: 0;
 
   b,
