--- a/src/components/composition/Grid/Grid.module.scss
+++ b/src/components/composition/Grid/Grid.module.scss
@@ -1,10 +1,10 @@
 @use 'sass:math';
-@use '../../../styles/variables/spacing';
 @use '../../../styles/variables/breakpoint';
 
 .grid {
   display: flex;
-  margin: (-#{math.div(spacing.$md, 2)}) (-#{math.div(spacing.$md, 2)});
+  margin: calc(var(--mobius-spacing-md) / -2)
+    calc(var(--mobius-spacing-md) / -2);
 
   // Wrap
   &--wrap {
@@ -18,15 +18,16 @@
   // Inset
   &--inset {
     margin: 0;
-    padding: math.div(spacing.$md, 2) math.div(spacing.$md, 2);
+    padding: calc(var(--mobius-spacing-md) / 2)
+      calc(var(--mobius-spacing-md) / 2);
   }
 
   &--inset-fluid {
-    padding: spacing.$fluid-sm 0;
+    padding: var(--mobius-spacing-fluid-sm) 0;
   }
 
   &--inset-vertical-fluid {
-    padding: spacing.$fluid-sm 0;
+    padding: var(--mobius-spacing-fluid-sm) 0;
   }
 
   // Direction
@@ -103,7 +104,8 @@
   &__item {
     flex: 0 0 auto;
     min-width: 0;
-    padding: (math.div(spacing.$md, 2)) (math.div(spacing.$md, 2));
+    padding: calc(var(--mobius-spacing-md) / 2)
+      calc(var(--mobius-spacing-md) / 2);
 
     &--grow {
       flex-grow: 1;
@@ -168,34 +170,42 @@
   // Spacing
   &--spacing {
     &-xs {
-      margin: (-#{math.div(spacing.$xs, 2)}) (-#{math.div(spacing.$xs, 2)});
+      margin: calc(var(--mobius-spacing-xs) / -2)
+        calc(var(--mobius-spacing-xs) / -2);
 
       > .grid__item {
-        padding: (math.div(spacing.$xs, 2)) (math.div(spacing.$xs, 2));
+        padding: calc(var(--mobius-spacing-xs) / 2)
+          calc(var(--mobius-spacing-xs) / 2);
       }
     }
 
     &-sm {
-      margin: (-#{math.div(spacing.$sm, 2)}) (-#{math.div(spacing.$sm, 2)});
+      margin: calc(var(--mobius-spacing-sm) / -2)
+        calc(var(--mobius-spacing-sm) / -2);
 
       > .grid__item {
-        padding: (math.div(spacing.$sm, 2)) (math.div(spacing.$sm, 2));
+        padding: calc(var(--mobius-spacing-sm) / 2)
+          calc(var(--mobius-spacing-sm) / 2);
       }
     }
 
     &-lg {
-      margin: (-#{math.div(spacing.$lg, 2)}) (-#{math.div(spacing.$lg, 2)});
+      margin: calc(var(--mobius-spacing-lg) / -2)
+        calc(var(--mobius-spacing-lg) / -2);
 
       > .grid__item {
-        padding: (math.div(spacing.$lg, 2)) (math.div(spacing.$lg, 2));
+        padding: calc(var(--mobius-spacing-lg) / 2)
+          calc(var(--mobius-spacing-lg) / 2);
       }
     }
 
     &-xl {
-      margin: (-#{math.div(spacing.$xl, 2)}) (-#{math.div(spacing.$xl, 2)});
+      margin: calc(var(--mobius-spacing-xl) / -2)
+        calc(var(--mobius-spacing-xl) / -2);
 
       > .grid__item {
-        padding: (math.div(spacing.$xl, 2)) (math.div(spacing.$xl, 2));
+        padding: calc(var(--mobius-spacing-xl) / 2)
+          calc(var(--mobius-spacing-xl) / 2);
       }
     }
 
