--- a/src/components/composition/Spacing/Spacing.module.scss
+++ b/src/components/composition/Spacing/Spacing.module.scss
@@ -1,107 +1,105 @@
-@use '../../../styles/variables/spacing';
-
 .spacing {
   &--top {
     &-xs {
-      margin-top: spacing.$xs;
+      margin-top: var(--mobius-spacing-xs);
     }
 
     &-sm {
-      margin-top: spacing.$sm;
+      margin-top: var(--mobius-spacing-sm);
     }
 
     &-md {
-      margin-top: spacing.$md;
+      margin-top: var(--mobius-spacing-md);
     }
 
     &-lg {
-      margin-top: spacing.$lg;
+      margin-top: var(--mobius-spacing-lg);
     }
 
     &-xl {
-      margin-top: spacing.$xl;
+      margin-top: var(--mobius-spacing-xl);
     }
 
     &-fluid {
-      margin-top: spacing.$fluid;
+      margin-top: var(--mobius-spacing-fluid);
     }
   }
 
   &--left {
     &-xs {
-      margin-left: spacing.$xs;
+      margin-left: var(--mobius-spacing-xs);
     }
 
     &-sm {
-      margin-left: spacing.$sm;
+      margin-left: var(--mobius-spacing-sm);
     }
 
     &-md {
-      margin-left: spacing.$md;
+      margin-left: var(--mobius-spacing-md);
     }
 
     &-lg {
-      margin-left: spacing.$lg;
+      margin-left: var(--mobius-spacing-lg);
     }
 
     &-xl {
-      margin-left: spacing.$xl;
+      margin-left: var(--mobius-spacing-xl);
     }
 
     &-fluid {
-      margin-left: spacing.$fluid;
+      margin-left: var(--mobius-spacing-fluid);
     }
   }
 
   &--bottom {
     &-xs {
-      margin-bottom: spacing.$xs;
+      margin-bottom: var(--mobius-spacing-xs);
     }
 
     &-sm {
-      margin-bottom: spacing.$sm;
+      margin-bottom: var(--mobius-spacing-sm);
     }
 
     &-md {
-      margin-bottom: spacing.$md;
+      margin-bottom: var(--mobius-spacing-md);
     }
 
     &-lg {
-      margin-bottom: spacing.$lg;
+      margin-bottom: var(--mobius-spacing-lg);
     }
 
     &-xl {
-      margin-bottom: spacing.$xl;
+      margin-bottom: var(--mobius-spacing-xl);
     }
 
     &-fluid {
-      margin-bottom: spacing.$fluid;
+      margin-bottom: var(--mobius-spacing-fluid);
     }
   }
 
   &--right {
     &-xs {
-      margin-right: spacing.$xs;
+      margin-right: var(--mobius-spacing-xs);
     }
 
     &-sm {
-      margin-right: spacing.$sm;
+      margin-right: var(--mobius-spacing-sm);
     }
 
     &-md {
-      margin-right: spacing.$md;
+      margin-right: var(--mobius-spacing-md);
     }
 
     &-lg {
-      margin-right: spacing.$lg;
+      margin-right: var(--mobius-spacing-lg);
     }
 
     &-xl {
-      margin-right: spacing.$xl;
+      margin-right: var(--mobius-spacing-xl);
     }
 
     &-right {
-      margin-left: spacing.$fluid;
+      margin-left: var(--mobius-spacing-fluid);
     }
   }
 
@@ -110,105 +108,105 @@
     &.spacing {
       &--top {
         &-xs {
-          margin-top: -(spacing.$xs);
+          margin-top: calc(-1 * var(--mobius-spacing-xs));
         }
 
         &-sm {
-          margin-top: -(spacing.$sm);
+          margin-top: calc(-1 * var(--mobius-spacing-sm));
         }
 
         &-md {
-          margin-top: -(spacing.$md);
+          margin-top: calc(-1 * var(--mobius-spacing-md));
         }
 
         &-lg {
-          margin-top: -(spacing.$lg);
+          margin-top: calc(-1 * var(--mobius-spacing-lg));
         }
 
         &-xl {
-          margin-top: -(spacing.$xl);
+          margin-top: calc(-1 * var(--mobius-spacing-xl));
         }
 
         &-fluid {
-          margin-top: -(spacing.$fluid);
+          margin-top: calc(-1 * var(--mobius-spacing-fluid));
         }
       }
 
       &--left {
         &-xs {
-          margin-left: -(spacing.$xs);
+          margin-left: calc(-1 * var(--mobius-spacing-xs));
         }
 
         &-sm {
-          margin-left: -(spacing.$sm);
+          margin-left: calc(-1 * var(--mobius-spacing-sm));
         }
 
         &-md {
-          margin-left: -(spacing.$md);
+          margin-left: calc(-1 * var(--mobius-spacing-md));
         }
 
         &-lg {
-          margin-left: -(spacing.$lg);
+          margin-left: calc(-1 * var(--mobius-spacing-lg));
         }
 
         &-xl {
-          margin-left: -(spacing.$xl);
+          margin-left: calc(-1 * var(--mobius-spacing-xl));
         }
 
         &-fluid {
-          margin-left: -(spacing.$fluid);
+          margin-left: calc(-1 * var(--mobius-spacing-fluid));
         }
       }
 
       &--bottom {
         &-xs {
-          margin-bottom: -(spacing.$xs);
+          margin-bottom: calc(-1 * var(--mobius-spacing-xs));
         }
 
         &-sm {
-          margin-bottom: -(spacing.$sm);
+          margin-bottom: calc(-1 * var(--mobius-spacing-sm));
         }
 
         &-md {
-          margin-bottom: -(spacing.$md);
+          margin-bottom: calc(-1 * var(--mobius-spacing-md));
         }
 
         &-lg {
-          margin-bottom: -(spacing.$lg);
+          margin-bottom: calc(-1 * var(--mobius-spacing-lg));
         }
 
         &-xl {
-          margin-bottom: -(spacing.$xl);
+          margin-bottom: calc(-1 * var(--mobius-spacing-xl));
         }
 
         &-fluid {
-          margin-bottom: -(spacing.$fluid);
+          margin-bottom: calc(-1 * var(--mobius-spacing-fluid));
         }
       }
 
       &--right {
         &-xs {
-          margin-right: -(spacing.$xs);
+          margin-right: calc(-1 * var(--mobius-spacing-xs));
         }
 
         &-sm {
-          margin-right: -(spacing.$sm);
+          margin-right: calc(-1 * var(--mobius-spacing-sm));
         }
 
         &-md {
-          margin-right: -(spacing.$md);
+          margin-right: calc(-1 * var(--mobius-spacing-md));
         }
 
         &-lg {
-          margin-right: -(spacing.$lg);
+          margin-right: calc(-1 * var(--mobius-spacing-lg));
         }
 
         &-xl {
-          margin-right: -(spacing.$xl);
+          margin-right: calc(-1 * var(--mobius-spacing-xl));
         }
 
         &-right {
-          margin-left: -(spacing.$fluid);
+          margin-left: calc(-1 * var(--mobius-spacing-fluid));
         }
       }
     }
