--- a/src/components/content/Longform/Longform.module.scss
+++ b/src/components/content/Longform/Longform.module.scss
@@ -1,25 +1,24 @@
 @use '../../../styles/variables/font';
-@use '../../../styles/variables/spacing';
 
 .longform {
   h1 {
-    margin-bottom: spacing.$lg;
+    margin-bottom: var(--mobius-spacing-lg);
   }
 
   h2 {
-    margin-bottom: spacing.$md;
+    margin-bottom: var(--mobius-spacing-md);
   }
 
   h3,
   h4,
   h5 {
-    margin-bottom: spacing.$sm;
+    margin-bottom: var(--mobius-spacing-sm);
   }
 
   p,
   ul,
   ol {
-    margin-bottom: spacing.$md;
+    margin-bottom: var(--mobius-spacing-md);
   }
 
   ul,
@@ -28,7 +27,7 @@
   }
 
   li {
-    margin-bottom: spacing.$sm;
+    margin-bottom: var(--mobius-spacing-sm);
 
     p:last-child {
       margin-bottom: 0;
@@ -42,7 +41,7 @@
     h3,
     h4,
     h5 {
-      margin-top: spacing.$lg;
+      margin-top: var(--mobius-spacing-lg);
     }
   }
 
@@ -52,6 +51,6 @@
 
   table,
   img {
-    margin: spacing.$lg 0;
+    margin: var(--mobius-spacing-lg) 0;
   }
 }
