--- a/src/components/controls/Checkbox/Checkbox.module.scss
+++ b/src/components/controls/Checkbox/Checkbox.module.scss
@@ -1,5 +1,4 @@
 @use '../../../styles/variables/color';
-@use '../../../styles/variables/spacing';
 @use '../../../styles/variables/transition';
 @use '../../../styles/variables/input';
 @use '../../../styles/mixins/forms';
@@ -11,7 +10,7 @@
   width: 100%;
 
   + .checkbox {
-    margin-top: spacing.$sm;
+    margin-top: var(--mobius-spacing-sm);
   }
 
   &__input {
