--- a/src/styles/variables/input.scss
+++ b/src/styles/variables/input.scss
@@ -1,5 +1,3 @@
-@use './spacing';
-
 $background: var(--input-background);
 $border: var(--input-border);
 $border-hover: var(--input-border-hover);
@@ -10,6 +8,6 @@ $color: var(--input-color);
 $checked: var(--input-checked);
 $checkradio-border-radius: var(--input-checkradio-border-radius);
 
-$padding-vertical: spacing.$sm;
-$padding-horizontal: spacing.$md;
+$padding-vertical: var(--mobius-spacing-sm);
+$padding-horizontal: var(--mobius-spacing-md);
 $padding: $padding-vertical $padding-horizontal;
