--- a/src/components/composition/FormGroup/FormGroup.module.scss
+++ b/src/components/composition/FormGroup/FormGroup.module.scss
@@ -1,7 +1,6 @@
 @use 'sass:math';
 @use '../../../styles/variables/color';
 @use '../../../styles/variables/breakpoint';
-@use '../../../styles/variables/transition';
 
 .form-group {
   &__label {
@@ -16,8 +15,8 @@
     display: grid;
     grid-template-rows: 0fr;
     transition:
-      grid-template-rows transition.$duration transition.$timing,
-      content-visibility transition.$duration transition.$timing;
+      grid-template-rows var(--mobius-transition),
+      content-visibility var(--mobius-transition);
     /* stylelint-disable-next-line property-no-unknown */
     transition-behavior: allow-discrete;
 
@@ -29,7 +28,7 @@
     &-inner {
       margin-block-start: 0;
       overflow: hidden;
-      transition: margin-block-start transition.$duration transition.$timing;
+      transition: margin-block-start var(--mobius-transition);
 
       &--open {
         margin-block-start: var(--mobius-spacing-md);
