--- a/src/components/controls/Checkbox/Checkbox.module.scss
+++ b/src/components/controls/Checkbox/Checkbox.module.scss
@@ -1,5 +1,4 @@
 @use '../../../styles/variables/color';
-@use '../../../styles/variables/transition';
 @use '../../../styles/variables/input';
 @use '../../../styles/mixins/forms';
 @use '../../../styles/mixins/screen-reader';
@@ -31,8 +30,9 @@
     opacity: 0;
     transform: scale(0.9);
     transition:
-      opacity transition.$duration transition.$timing,
-      transform transition.$duration-boing transition.$timing-boing;
+      opacity var(--mobius-transition),
+      transform var(--mobius-transition-duration-boing)
+        var(--mobius-transition-timing-boing);
 
     .checkbox--checked & {
       color: color.$white;
