--- a/src/components/controls/Input/Input.module.scss
+++ b/src/components/controls/Input/Input.module.scss
@@ -1,6 +1,5 @@
 @use 'sass:math';
 @use '../../../styles/variables/font';
-@use '../../../styles/variables/input';
 @use '../../../styles/mixins/forms';
 
 .input {
@@ -14,13 +13,13 @@
   }
 
   &__prefix {
-    margin-right: -(math.div(input.$padding-horizontal, 2));
-    padding: 0 0 0 input.$padding-horizontal;
+    margin-right: calc(var(--input-padding-horizontal) / -2);
+    padding: 0 0 0 var(--input-padding-horizontal);
   }
 
   &__suffix {
-    margin-left: -(math.div(input.$padding-horizontal, 2));
-    padding: 0 input.$padding-horizontal 0 0;
+    margin-left: calc(var(--input-padding-horizontal) / -2);
+    padding: 0 var(--input-padding-horizontal) 0 0;
   }
 
   &__input {
